--- a/src/options/src/components/Navbar/Navbar.css
+++ b/src/options/src/components/Navbar/Navbar.css
@@ -18,6 +18,10 @@
 	justify-content: flex-start;
 }
 
+.navbar__top {
+	padding: 4px 12px;
+}
+
 .navbar__settings {
 	position: relative;
 	width: 100%;
