migrate PlaybackControl, without Custom and keybindings

--- a/app/src/content_scripts/components/index.css
+++ b/app/src/content_scripts/components/index.css
@@ -5,6 +5,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --tw-bg-opacity: 1;
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
