--- a/app/src/content_scripts/webApps/youtube/global.css
+++ b/app/src/content_scripts/webApps/youtube/global.css
@@ -1,1 +1,11 @@
 @tailwind utilities;
+
+:root {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+}
